--- a/index.html
+++ b/index.html
@@ -3,62 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parcial 2 - DPW107</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>DPW107 - Parcial 2</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Mi Sitio</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="#">KernelWire</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                        <a class="nav-link active" aria-current="page" href="#">Hardware y Electrónica</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Categoría 1</a>
+                        <a class="nav-link" href="#">Sistemas Operativos</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Categoría 2</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
-                    </li>
-                </ul>
+                    </ul>
                 <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Buscar</button>
+                    <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+                    <button class="btn btn-outline-light" type="submit">Buscar</button>
                 </form>
             </div>
         </div>
     </nav>
 
-    <div class="container-fluid">
+    <div class="container-fluid mt-3">
         <div class="row">
             <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
-                <div class="position-sticky pt-3 sidebar-sticky">
+                <div class="position-sticky pt-3">
                     <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
-                        <span>Sección Principal</span>
+                        <span>Menú de Navegación</span>
                     </h6>
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">
-                                Submenú 1
+                            <a class="nav-link active" aria-current="page" href="#">Hardware y Electrónica</a>
+                        </li>
+                    </ul>
+                    <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
+                        <span>Selecciona una opción:</span>
+                    </h6>
+                    <ul class="nav flex-column mb-2">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                <span data-feather="home" class="align-text-bottom"></span>
+                                Inicio
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">
-                                Submenú 2
+                                <span data-feather="file-text" class="align-text-bottom"></span>
+                                Arduino
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">
-                                Submenú 3
+                                <span data-feather="tinker" class="align-text-bottom"></span>
+                                TinkerCAD
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                <span data-feather="componentes" class="align-text-bottom"></span>
+                                Componentes
                             </a>
                         </li>
                     </ul>
@@ -67,58 +78,52 @@
 
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
                 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                    <h1 class="h2">Contenido Destacado</h1>
-                </div>
+                    <h1 class="h2">Sistemas Operativos</h1> </div>
 
-                <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 mb-4">
+                <div class="row row-cols-1 row-cols-md-3 g-4">
                     <div class="col">
                         <div class="card h-100">
-                            <img src="https://via.placeholder.com/400x200/FF5733/FFFFFF?text=Imagen+1" class="card-img-top" alt="Imagen de ejemplo 1">
-                            <div class="card-body">
-                                <h5 class="card-title">Título de la Card 1</h5>
-                                <p class="card-text">Esta es una breve descripción del contenido de la primera tarjeta. Aquí puedes añadir información relevante.</p>
-                                <div class="mb-3">
-                                    Contador: <span class="badge bg-primary fs-5" id="contador1">0</span>
+                            <img src="img/imagen1.jpg"card-img-top" alt="Imagen Card 1">
+                            <div class="card-body">"
+                                <h5 class="card-title">Card Modal</h5>
+                                <p class="card-text">Este card tendrá un botón que al hacer click abrirá un modal con un título y un texto.</p>
+                                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#cardModal1">Abrir</button>
+                            </div>
+                            <div class="card-footer">
                                 </div>
-                                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalCard1">
-                                    Ver Detalles
-                                </button>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="card h-100">
+                            <img src="img/imagen2.jpg" class="card-img-top" alt="Imagen Card 2">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div>
+                            <div class="card-footer">
+                                <small class="text-muted">
+                                    Estrellas: <span id="contador2">0</span> <button class="btn btn-sm btn-outline-secondary ms-2" onclick="modificarContador('contador2', -1)">Quitar</button>
+                                    <button class="btn btn-sm btn-outline-primary" onclick="modificarContador('contador2', 1)">Agregar</button>
+                                    <button class="btn btn-sm btn-outline-danger" onclick="modificarContador('contador2', 0, true)">Resetear</button>
+                                </small>
                             </div>
                         </div>
                     </div>
 
                     <div class="col">
                         <div class="card h-100">
-                            <img src="https://via.placeholder.com/400x200/33FF57/FFFFFF?text=Imagen+2" class="card-img-top" alt="Imagen de ejemplo 2">
+                            <img src="img/imagen3.jpg" class="card-img-top" alt="Imagen Card 3">
                             <div class="card-body">
-                                <h5 class="card-title">Título de la Card 2</h5>
-                                <p class="card-text">Aquí va la descripción de la segunda tarjeta. Puedes explicar más sobre lo que representa la imagen o el tema.</p>
-                                <div class="mb-3">
-                                    Contador: <span class="badge bg-success fs-5" id="contador2">0</span>
-                                </div>
-                                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalCard2">
-                                    Ver Detalles
-                                </button>
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             </div>
-                        </div>
-                    </div>
-
-                    <div class="col">
-                        <div class="card h-100">
-                            <img src="https://via.placeholder.com/400x200/5733FF/FFFFFF?text=Imagen+3" class="card-img-top" alt="Imagen de ejemplo 3">
-                            <div class="card-body">
-                                <h5 class="card-title">Título de la Card 3</h5>
-                                <p class="card-text">Una última descripción para la tercera tarjeta. Utiliza este espacio para destacar características o información clave.</p>
-                                <div class="mb-3">
-                                    Contador: <span class="badge bg-danger fs-5" id="contador3">0</span>
-                                    <div class="col">
-                                        
-
-
-                                </div>
-                                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalCard3">
-                                    Ver Detalles
-                                </button>
+                            <div class="card-footer">
+                                <small class="text-muted">
+                                    Estrellas: <span id="contador3">0</span> <button class="btn btn-sm btn-outline-secondary ms-2" onclick="modificarContador('contador3', -1)">Quitar</button>
+                                    <button class="btn btn-sm btn-outline-primary" onclick="modificarContador('contador3', 1)">Agregar</button>
+                                    <button class="btn btn-sm btn-outline-danger" onclick="modificarContador('contador3', 0, true)">Resetear</button>
+                                </small>
                             </div>
                         </div>
                     </div>
@@ -127,68 +132,26 @@
         </div>
     </div>
 
-    <div class="modal fade" id="modalCard1" tabindex="-1" aria-labelledby="modalCard1Label" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
+    <div class="modal fade" id="cardModal1" tabindex="-1" aria-labelledby="cardModal1Label" aria-hidden="true">
+        <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="modalCard1Label">Detalles de la Card 1</h5>
+                    <h5 class="modal-title" id="cardModal1Label">Modal del Card</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <img src="https://via.placeholder.com/600x300/FF5733/FFFFFF?text=Imagen+1+Ampliada" class="img-fluid mb-3" alt="Imagen ampliada 1">
-                    <p>Este es el contenido detallado de la Card 1. Aquí podrías tener más texto, una galería de imágenes, o cualquier otra información expandida que no quepa en la card principal.</p>
-                    <p>¡El contador de esta card se ha incrementado al abrir el modal!</p>
+                    <img src="img/imagen1.jpg" class="img-fluid mb-3" alt="Imagen Modal Card 1">
+                    <p>Este es un modal que se abre al hacer click en el botón del card.</p>
+                    <p>Aquí puedes colocar cualquier contenido que desees para esta card específica.</p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                    <button type="button" class="btn btn-primary">Acción Adicional</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="modal fade" id="modalCard2" tabindex="-1" aria-labelledby="modalCard2Label" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="modalCard2Label">Detalles de la Card 2</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <img src="https://via.placeholder.com/600x300/33FF57/FFFFFF?text=Imagen+2+Ampliada" class="img-fluid mb-3" alt="Imagen ampliada 2">
-                    <p>Aquí se presenta información más a fondo sobre el tema de la Card 2. Puedes usar párrafos, listas o cualquier otro elemento HTML.</p>
-                    <p>¡El contador de esta card se ha incrementado al abrir el modal!</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                    <button type="button" class="btn btn-primary">Acción Adicional</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="modal fade" id="modalCard3" tabindex="-1" aria-labelledby="modalCard3Label" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="modalCard3Label">Detalles de la Card 3</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <img src="https://via.placeholder.com/600x300/5733FF/FFFFFF?text=Imagen+3+Ampliada" class="img-fluid mb-3" alt="Imagen ampliada 3">
-                    <p>Este es el espacio para todos los detalles extendidos de la Card 3. Proporciona toda la información que el usuario pueda necesitar aquí.</p>
-                    <p>¡El contador de esta card se ha incrementado al abrir el modal!</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                    <button type="button" class="btn btn-primary">Acción Adicional</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
